--- a/Prowler/buildspec.yaml
+++ b/Prowler/buildspec.yaml
@@ -2,25 +2,25 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      docker: 19  # Ensure Docker is available
     commands:
-      - echo "Logging into public ECR..."
-      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
-      - echo "Pulling Prowler image..."
-      - docker pull public.ecr.aws/prowler-cloud/prowler:latest
+      - echo "Updating the package manager..."
+      - sudo apt update
+      - echo "Installing pipx..."
+      - sudo apt install -y pipx
+      - echo "Ensuring pipx path is available..."
+      - pipx ensurepath
+      - export PATH=$PATH:/root/.local/bin
+      - echo "Installing Prowler using pipx..."
+      - pipx install prowler
+      - echo "Verifying Prowler installation..."
+      - prowler -v
   build:
     commands:
-      - echo "Running Prowler security checks..."
-      - mkdir -p prowler-output
-      - docker run --rm -v $(pwd)/prowler-output:/prowler/output public.ecr.aws/prowler-cloud/prowler:latest -M json -o prowler-report
+      - echo "Running Prowler to generate an HTML report and uploading it to S3..."
+      - prowler aws -M html -B your-prowler-reports-bucket --output-directory reports --output-filename prowler-report --region us-east-1 || echo "Prowler completed with non-zero exit code. Continuing..."
   post_build:
     commands:
-      - echo "Uploading report to S3..."
-      - REPORT_NAME="prowler-report-$(date +%Y-%m-%d_%H-%M-%S).json"
-      - mv prowler-output/prowler-report-*.json prowler-output/$REPORT_NAME
-      - aws s3 cp prowler-output/$REPORT_NAME s3://your-prowler-reports-bucket/
-      - echo "Security scan completed. Report uploaded to S3 as $REPORT_NAME"
+      - echo "Prowler scan completed. HTML report uploaded to S3 in 'reports' folder as 'prowler-report.html'."
 artifacts:
   files:
     - '**/*'
