--- a/.github/workflows/scoutsuite.yml
+++ b/.github/workflows/scoutsuite.yml
@@ -14,7 +14,7 @@ jobs:
       contents: read
 
     env:
-      S3_BUCKET_URI: ${{ secrets.S3_BUCKET_URI }}
+      S3_BUCKET: ${{ secrets.S3_BUCKET_URI2 }}
 
     steps:
       - name: Checkout Repository
@@ -59,10 +59,10 @@ jobs:
 
       - name: Upload Report to S3
         env:
-          S3_BUCKET_URI: ${{ env.S3_BUCKET_URI }}
+          S3_BUCKET: ${{ env.S3_BUCKET }}
         run: |
           TIMESTAMP=$(date +%Y-%m-%d_%H-%M-%S)
-          S3_DESTINATION="s3://${S3_BUCKET_URI}/scout-reports/${TIMESTAMP}/"
+          S3_DESTINATION="s3://${S3_BUCKET}/scout-reports/${TIMESTAMP}/"
           echo "Uploading reports to $S3_DESTINATION"
           aws s3 cp ScoutSuite/scout-report/ "$S3_DESTINATION" --recursive
 
